--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "build": "npm built"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
